# freeswitch

./: configure.ac  devel-bootstrap.sh
src/: switch_core_media.c  switch_ivr_async.c  switch_rtp.c
src/mod/applications/mod_dptools/: mod_dptools.c
src/mod/applications/mod_vad/: Makefile.am  mod_vad.c
src/mod/asr_tts/mod_unimrcp/: mod_unimrcp.c
src/mod/asr_tts/mod_vosk/: mod_vosk.c
src/mod/asr_tts/mod_ws_stream/: Makefile.am  README.md  mod_ws_stream.c
src/mod/asr_tts/mod_ws_stream/conf/: default.esl.xml  default.xml  ws_stream.conf.xml
src/mod/endpoints/mod_sofia/: sofia_presence.c
src/mod/endpoints/mod_sofia/test/: sipp-based-tests.c
